# apps/fe-app/swagger/swagger.output.json
@@ -273,13 +273,13 @@
       }
     },
     "/users/password/forgot/captcha": {
-      "post": {
+      "get": {
         "tags": [
           "Users"
         ],
         "summary": "Forgot Password Captcha",
         "description": "Get captcha to reset password",
-        "operationId": "forgot_password_captcha_users_password_forgot_captcha_post",
+        "operationId": "forgot_password_captcha_users_password_forgot_captcha_get",
         "security": [
           {
             "OAuth2PasswordBearer": []
@@ -653,6 +653,100 @@
         ]
       }
     },
+    "/users/profile/email/change/otp": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Change Email Get Otp",
+        "description": "get otp to change email",
+        "operationId": "change_email_get_otp_users_profile_email_change_otp_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangeEmailGetOtpBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChangeEmailGetOtpResponseApiModel"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ]
+      }
+    },
+    "/users/profile/email/change": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Change Email By Otp",
+        "description": "Change email with otp",
+        "operationId": "change_email_by_otp_users_profile_email_change_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangeEmailByOtpBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChangeEmailByOtpResponseApiModel"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ]
+      }
+    },
     "/users/profile/username/change": {
       "post": {
         "tags": [
@@ -838,6 +932,32 @@
         }
       }
     },
+    "/reports/categories": {
+      "get": {
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Report Categories",
+        "description": "Get list of report categories.",
+        "operationId": "report_categories_reports_categories_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/FinancialReportCategoryApiModel"
+                  },
+                  "type": "array",
+                  "title": "Response Report Categories Reports Categories Get"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/reports/{report_id}": {
       "get": {
         "tags": [
@@ -859,6 +979,22 @@
             "schema": {
               "type": "string",
               "title": "Report Id"
+            }
+          },
+          {
+            "name": "screenshotQueryId",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Screenshotqueryid"
             }
           }
         ],
@@ -942,32 +1078,6 @@
         }
       }
     },
-    "/reports/categories": {
-      "get": {
-        "tags": [
-          "Reports"
-        ],
-        "summary": "Report Categories",
-        "description": "Get list of report categories.",
-        "operationId": "report_categories_reports_categories_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/FinancialReportCategoryApiModel"
-                  },
-                  "type": "array",
-                  "title": "Response Report Categories Reports Categories Get"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/reports/{report_id}/favorite": {
       "post": {
         "tags": [
@@ -1033,7 +1143,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "integer",
+              "type": "string",
               "title": "Report Id"
             }
           }
@@ -1045,6 +1155,64 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/UserReportFavoriteStatus"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/reports/{report_id}/screenshot": {
+      "post": {
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Save Screenshot",
+        "description": "Save report screenshot",
+        "operationId": "save_screenshot_reports__report_id__screenshot_post",
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "report_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Report Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_save_screenshot_reports__report_id__screenshot_post"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReportScreenshotResponseApiModel"
                 }
               }
             }
@@ -1565,6 +1733,73 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/DashboardItemApiModel"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/dashboards/{dashboard_id}/items/{dashboard_item_id}/screenshot": {
+      "post": {
+        "tags": [
+          "Dashboards"
+        ],
+        "summary": "Save Dashboard Item Screenshot",
+        "description": "Replace item in dashboard.",
+        "operationId": "save_dashboard_item_screenshot_dashboards__dashboard_id__items__dashboard_item_id__screenshot_post",
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "dashboard_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Dashboard Id"
+            }
+          },
+          {
+            "name": "dashboard_item_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Dashboard Item Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_save_dashboard_item_screenshot_dashboards__dashboard_id__items__dashboard_item_id__screenshot_post"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DashboardItemScreenshotResponseApiModel"
                 }
               }
             }
@@ -2136,6 +2371,58 @@
         ],
         "title": "Body_login_for_access_token_users_login_post"
       },
+      "Body_save_dashboard_item_screenshot_dashboards__dashboard_id__items__dashboard_item_id__screenshot_post": {
+        "properties": {
+          "file": {
+            "type": "string",
+            "format": "binary",
+            "title": "File"
+          },
+          "selected_filters": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Selected Filters"
+          }
+        },
+        "type": "object",
+        "required": [
+          "file",
+          "selected_filters"
+        ],
+        "title": "Body_save_dashboard_item_screenshot_dashboards__dashboard_id__items__dashboard_item_id__screenshot_post"
+      },
+      "Body_save_screenshot_reports__report_id__screenshot_post": {
+        "properties": {
+          "selected_filters": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Selected Filters"
+          },
+          "file": {
+            "type": "string",
+            "format": "binary",
+            "title": "File"
+          }
+        },
+        "type": "object",
+        "required": [
+          "selected_filters",
+          "file"
+        ],
+        "title": "Body_save_screenshot_reports__report_id__screenshot_post"
+      },
       "Body_test_user_access_token_users_token_post": {
         "properties": {
           "grant_type": {
@@ -2196,11 +2483,25 @@
       "CaptchaApiModel": {
         "properties": {
           "value": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Value"
           },
           "uid": {
-            "type": "integer",
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Uid"
           },
           "required": {
@@ -2236,6 +2537,68 @@
           "order"
         ],
         "title": "ChangeDashboardReportItemSortOrderBody"
+      },
+      "ChangeEmailByOtpBody": {
+        "properties": {
+          "otp": {
+            "type": "string",
+            "title": "Otp"
+          }
+        },
+        "type": "object",
+        "required": [
+          "otp"
+        ],
+        "title": "ChangeEmailByOtpBody"
+      },
+      "ChangeEmailByOtpResponseApiModel": {
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "title": "Success"
+          }
+        },
+        "type": "object",
+        "required": [
+          "success"
+        ],
+        "title": "ChangeEmailByOtpResponseApiModel"
+      },
+      "ChangeEmailGetOtpBody": {
+        "properties": {
+          "newEmail": {
+            "type": "string",
+            "title": "Newemail"
+          },
+          "passwordVerificationToken": {
+            "type": "string",
+            "title": "Passwordverificationtoken"
+          }
+        },
+        "type": "object",
+        "required": [
+          "newEmail",
+          "passwordVerificationToken"
+        ],
+        "title": "ChangeEmailGetOtpBody"
+      },
+      "ChangeEmailGetOtpResponseApiModel": {
+        "properties": {
+          "retrySeconds": {
+            "type": "integer",
+            "title": "Retryseconds"
+          },
+          "email": {
+            "type": "string",
+            "title": "Email"
+          }
+        },
+        "type": "object",
+        "required": [
+          "retrySeconds",
+          "email"
+        ],
+        "title": "ChangeEmailGetOtpResponseApiModel"
       },
       "ChangePasswordByOtpApiModel": {
         "properties": {
@@ -2651,6 +3014,19 @@
         ],
         "title": "DashboardItemReportApiModel"
       },
+      "DashboardItemScreenshotResponseApiModel": {
+        "properties": {
+          "queryId": {
+            "type": "string",
+            "title": "Queryid"
+          }
+        },
+        "type": "object",
+        "required": [
+          "queryId"
+        ],
+        "title": "DashboardItemScreenshotResponseApiModel"
+      },
       "DashboardListItemApiModel": {
         "properties": {
           "identifier": {
@@ -2848,6 +3224,17 @@
                 "type": "null"
               }
             ]
+          },
+          "screenshotUrl": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Screenshoturl"
           }
         },
         "type": "object",
@@ -2860,7 +3247,8 @@
           "markdownDescription",
           "video",
           "relatedReports",
-          "reportCalculation"
+          "reportCalculation",
+          "screenshotUrl"
         ],
         "title": "FinancialReportDetailsApiModel"
       },
@@ -3058,7 +3446,14 @@
             "description": "آدرس لوگوی صندوق - سایز کوچک"
           },
           "website": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Website",
             "description": "وبسایت صندوق"
           },
@@ -4238,14 +4633,7 @@
             "title": "Points"
           },
           "mean": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "integer"
-              }
-            ],
+            "type": "number",
             "title": "Mean"
           }
         },
@@ -4260,11 +4648,10 @@
         "properties": {
           "date": {
             "type": "string",
-            "format": "date",
             "title": "Date"
           },
           "value": {
-            "type": "integer",
+            "type": "number",
             "title": "Value"
           }
         },
@@ -4453,7 +4840,6 @@
         "properties": {
           "dt": {
             "type": "string",
-            "format": "date",
             "title": "Dt"
           },
           "indexValue": {
@@ -4472,6 +4858,19 @@
           "netFlow"
         ],
         "title": "Report6CalculationResultTimeSeriesItem"
+      },
+      "ReportScreenshotResponseApiModel": {
+        "properties": {
+          "queryId": {
+            "type": "string",
+            "title": "Queryid"
+          }
+        },
+        "type": "object",
+        "required": [
+          "queryId"
+        ],
+        "title": "ReportScreenshotResponseApiModel"
       },
       "ResetForgotPasswordByOtpResponseApiModel": {
         "properties": {
